fix bug - filter container not hidden on mobile

--- a/app/assets/stylesheets/live_jobs.scss
+++ b/app/assets/stylesheets/live_jobs.scss
@@ -156,11 +156,11 @@ a:hover, a:visited, a:link, a:active
   padding-bottom: 30px;
 }
 .filters-container {
-  visibility: hidden;
+  @media (max-width: 991px) {
+    display: none;
+  }
 
   @media (min-width: 992px) {
-    visibility: visible;
-    //font-size: 1.5rem;
     background-color: #ffffff;
     margin-left: 30px;
     flex: 0 1 25em;
